# tftp-client

./: .gitignore  LICENSE  README.md  pyproject.toml
tftp_client/: cli.py
